# src/routes/mod.rs
@@ -21,15 +21,8 @@ pub mod manager;
 
 #[derive(Deserialize)]
 pub struct CreateUserOptions {
-    /// folder name where user's assets are stored.
-    /// If this is not specified, user's assets will be stored in application root folder.
-    pub root_folder: Option<String>,
-
-    /// max size set for user's `root` folder (in bytes).
-    /// When this is exceeded, user will no longer be able to create an asset.
-    pub folder_max_size: Option<i64>,
-
-    /// User's role. Please see [UserRole](crate::models::user::UserRole).
+    pub partition: Option<String>,
+    pub partition_size: Option<i64>,
     pub role: UserRole,
 }
 
